<resources>
    <string name="app_name">MobileSort</string>
    <string name="BubbleBt">Bubble Sort</string>
    <string name="QuickBt">Quick Sort</string>
    <string name="MainLabel">Seleccione el método de ordenamiento que desea observar</string>
    <string name="title_activity_animation">AnimationActivity</string>
    <string name="ReturnBt">Volver</string>
    <string name="Sort">Sort</string>
    <string name="UnSort">UnSort</string>
    <string name="_10">10</string>
    <string name="defina_la_extension_de_la_lista">Defina la extensión de la lista.</string>
    <string name="escoja_el_tipo_de_ordenamiento">Escoja el tipo de ordenamiento.</string>

</resources>
